# rag-knowledge-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
agent/: graph.py
api/: main.py
docs/: sample.md
ingestion/: chunker.py  embedder.py  indexer.py  loader.py
retrieval/: context_builder.py  query_engine.py  reranker.py
screenshots of progress/: IMG_9875.MOV  preview
